# linear-logic

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE.md  Linear-Logic-Functor.html  Linear-Logic-Internal.html  Linear-Logic-Orphans.html  Linear-Logic-Unsafe.html  Linear-Logic-Ur.html  Linear-Logic.html  README.md  doc-index.html  index.html  linear-logic.cabal  linear-logic.haddock
.github/workflows/: haskell-ci.yml
internal/Linear/Logic/: Internal.hs  Plugin.hs
src/: Linear.Logic.Functor.html  Linear.Logic.Unsafe.html  Linear.Logic.Ur.html  Linear.Logic.Y.html  Linear.Logic.html
src/Linear/: Logic.hs
src/Linear/Logic/: Day.hs  Functor.hs  Internal.hs  James.hs  Ops.hs  Orphans.hs  Plugin.hs  Unsafe.hs  Ur.hs  Y.hs  Yoneda.hs
test/: LogicProperties.hs  PluginCanary.hs
wip/: affine.hs
