cabal-version: 2.2
name: linear-logic
version: 0
build-type: Simple

library
  default-language: Haskell2010
  build-depends:
    base,
    contravariant,
    ghc-prim,
    linear-base
  other-modules:
    Linear.Logic.Ur
  exposed-modules:
    Linear.Logic
    Linear.Logic.Functor
    Linear.Logic.Unsafe
  ghc-options: -Wall -fno-show-valid-hole-fits
  hs-source-dirs: src
